# Myproject-linux

./: .viminfo  CMakeLists.txt
.ssh/: authorized_keys  id_rsa  id_rsa.pub
cpp-linux/: Jenkinsfile
cpp-linux/src/: main.cpp
tests/: test_logic.cpp
